Bug 74218 - Export to SVG does not include xmlns attribute in svg node
Summary: Export to SVG does not include xmlns attribute in svg node
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.4.2 release
Hardware: Other Linux (All)
: medium normal
Assignee: Tomaz Vajngerl
URL:
Whiteboard: target:4.3.0 target:4.2.2
Keywords:
: 74736 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-01-30 11:11 UTC by squaredoffagain
Modified: 2014-04-13 19:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description squaredoffagain 2014-01-30 11:11:47 UTC
Exported SVGs are more readily usable if they include xmlns="http://www.w3.org/2000/svg" in the <svg> section.
Comment 1 Tomaz Vajngerl 2014-02-13 18:37:23 UTC
Confirmed!
Comment 2 Tomaz Vajngerl 2014-02-13 18:39:01 UTC
*** Bug 74736 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2014-02-13 19:25:54 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b2333d1be686716b2ee2b36e8340767aad57f36

fdo#74218 add SVG header when exporting via mtf



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-02-17 10:04:48 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9cc2ab21d3e18d6ab331e06fd96309bad047615c&h=libreoffice-4-2

fdo#74218 add SVG header when exporting via mtf


It will be available in LibreOffice 4.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.