fdo#74218 add SVG header when exporting via mtf

Change-Id: Ia200fbf73c1464160ceddc705f72d77b5f1eff51